css/style.css
/* GENERAL STYLES & BACKGROUND */

body {
    background: #0C739F url('../img/bg.png') repeat-x top center;
    font-family: "Tahoma", sans-serif;
}

p {
    margin: 5px;
}

.container {
    width: 1000px;
    margin: 0 auto;
    background: #FFF;
    box-shadow: -1px -5px 20px 5px rgba(0,0,0,0.55);
    border-bottom: 4px solid #000;
}

/* HEADER */

header {
    display: flex;
    height: 175px;
    flex-flow: column wrap;
}

.logo,
.contacts {
    flex: 1;
    color: #49ADC0;
    font-size: .8em;
}

.contacts > a,
.countries > a {
    color: #49ADC0;
}

.logo {
    flex-basis: 100%;
    box-sizing: border-box;
    min-width: 30%;
    margin-left: 20px;
    padding-top: 100px;
    background: #FFF url("../img/logo.png") no-repeat center bottom;
    text-align: center;
}

.contacts {
    padding-top: 10px;
    padding-left: 500px;
    line-height: 20px;
}

.countries {
    font-size: .6em;
    padding-left: 320px;
}

.countries > a {
    display: inline-block;
    box-sizing: border-box;
    margin-left: 5px;
    margin-bottom: 5px;
    height: 55px;
    width: 51px;
    padding-top: 45px;
    text-align: center;
    background: url('../img/sprite.png') 4px 0 no-repeat;
}
/*
.india {
    background-position: 0 0;
}*/

.countries > a.nepal {
    background-position: -46px 0;
}

.countries > a.tibet {
    background-position: -98px 0;
}

.countries > a.bhutan {
    background-position: -149px 0;
}

.countries > a.sri-lanka {
    background-position: -201px 0;
}

.countries > a.maldives {
    background-position: -254px 0;
}

/* HERO AREA */

.hero {
    border-top: 1px solid #128AA7;
    border-bottom: 1px solid #128AA7;
}

.main-nav {
    position: relative;
    top: -2px;
    box-shadow: 0 2px 1px 0 #7B7B7B;
}

.main-nav > ul {
    display: flex;
    justify-content: space-around;
    height: 30px;
    border-top: 1px solid #B4B4B5;
    border-bottom: 1px solid #000;
}

.main-nav > ul > li {
    position: relative;
}

.main-nav ul {
    background: #323232;
    background: linear-gradient(#373737, #303030);
}

.main-nav a {
    display: inline-block;
    box-sizing: border-box;
    padding: 7px;
    color: #FFF;
    font-size: .9em;
    text-decoration: none;
}

.include > ul {
    position: absolute;
    top: 31px;
    display: none;
}

.include li {
    width: 145px;
}

.main-nav > ul > li.include:hover > ul {
    display: block;
}

.include a::after {
    content: '';
    width: 0;
    height: 0;
    border-left: 3px solid transparent;
    border-right: 3px solid transparent;
    border-top: 8px solid #FFF;
    position: absolute;
    top: 12px;
    right: -6px;
}

/* MAIN */

.main {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
}

.info,
.news {
    flex: 1 0 15%;
    padding: 10px;
    background-color: #edeef0;
    color: #787878;
    font-size: .85em;
    line-height: 18px;
}

.main h2 {
    margin: 0 auto 10px;
    font-size: 1.3em;
    text-align: center;
    text-shadow: 1px 1px #000;
    letter-spacing: .1em;
    color: #424C43;
}

.info {
    border-right: 1px solid #A9A8A8;
}

.news {
    border-left: 1px solid #A9A8A8;
}

.center {
    flex: 2 0 50%;
}

/* FOOTER */

footer {
    margin: 10px auto 15px;
    text-align: center;
    color: #E6F9FD;
    font-size: .8em;
}

